Bug 1030206 - webgl-1.0.3 Disallow floating point render targets if WEBGL_color_buffer_float is not enabled. r=jgilbert