content/canvas/src/WebGLFramebuffer.h
@@ -11,6 +11,7 @@
 #include "nsWrapperCache.h"
 
 #include "mozilla/LinkedList.h"
+#include "mozilla/TypedEnum.h"
 
 namespace mozilla {
 
@@ -52,7 +53,15 @@ public:
         bool IsDeleteRequested() const;
 
         bool HasAlpha() const;
-        bool IsReadableFloat() const;
+
+        // For IsFloatType()
+        MOZ_BEGIN_NESTED_ENUM_CLASS(FloatType)
+            Any = 0,
+            Half,
+            Full
+        MOZ_END_NESTED_ENUM_CLASS(FloatType)
+
+        bool IsFloatType(FloatType floatType = FloatType::Any) const;
 
         void SetTexImage(WebGLTexture* tex, GLenum target, GLint level);
         void SetRenderbuffer(WebGLRenderbuffer* rb);
@@ -195,6 +204,8 @@ private:
                mStencilAttachment,
                mDepthStencilAttachment;
 };
+
+MOZ_FINISH_NESTED_ENUM_CLASS(WebGLFramebuffer::Attachment::FloatType)
 
 } // namespace mozilla
 
